--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="keywords" content="">
     <meta http-equiv="description" content="">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-    <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript"  src="js/cookie.js"></script>
   </head>
   <body>
     <div  id="wrap">
@@ -34,12 +32,12 @@
        <div id="banner">
           <div class="banner_menu">
           <ul>
-              <li><a href="">首页</a></li>
+              <li><a href="" id="module">首页</a></li>
               <li><a href="scene.html">风景区</a></li>
               <li><a href="order.html">订单管理</a></li>
-              <li><a href="">财务管理</a></li>
-              <li><a href="">个人中心</a></li>
-              <li><a href="">平台通知</a></li>
+              <li><a href="financial.html">财务管理</a></li>
+              <li><a href="personal.html">个人中心</a></li>
+              <li><a href="notification.html">平台通知</a></li>
           </ul>
       </div>
           <div id="banner_wrap">
@@ -273,5 +271,7 @@
     </div>
     <!--end wrap-->
   </body>
+  <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript"  src="js/cookie.js"></script>
   <script type="text/javascript"  src="js/base.js"></script>
  </html>
