--- a/login.html
+++ b/login.html
@@ -5,19 +5,7 @@
     <title>用户登录页</title>
 	<meta http-equiv="keywords" content="">
     <meta http-equiv="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="author" content="duanliang, duanliang920.com" />
     <link rel="stylesheet"	 href="css/base.css" />
-    <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/Load.js"></script>
-    <script src="js/cookie.js"></script>
-    <style>
-       body{font-size:62.5%;font-family:"Microsoft YaHei",Arial; overflow-x:hidden; overflow-y:auto;}
-       .viewport{ max-width:640px; min-width:300px; margin:0 auto;}
-   </style>
   </head>
   <body id="public_lg">
      <div  class="log_re" >
@@ -42,5 +30,8 @@
         </form>
     </div>
 </body>
+  <script type="text/javascript"  src="js/jquery-2.1.1.min.js"></script>
+  <script type='text/javascript' src='js/jquery.md5.js'></script>
+  <script src="js/cookie.js"></script>
   <script src="js/base.js"></script>
 </html>
