--- a/order.html
+++ b/order.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>order</title>
-
     <link rel='stylesheet' href='css/jedate.css'>
     <link rel='stylesheet' href='css/base.css'>
-
-    <style>
-        .bodys{ padding:50px 0 0 50px;}
-        .datainp{ width:200px; height:30px; border:1px #ccc solid;}
-        .datep{ margin-bottom:40px; line-height:24px; margin-right:15px;}
-    </style>
 </head>
 <body id="wrap">
    <header>
@@ -41,6 +34,17 @@
         </div>
     </div>
 </header>
+   <div class="banner_menu">
+       <ul>
+           <li><a href="index.html">首页</a></li>
+           <li><a href="scene.html">风景区</a></li>
+           <li><a href="order.html" id="module">订单管理</a></li>
+           <li><a href="financial.html">财务管理</a></li>
+           <li><a href="personal.html">个人中心</a></li>
+           <li><a href="notification.html">平台通知</a></li>
+       </ul>
+   </div>
+   <div class="clear"></div>
    <div class="content">
        <form class="orderSearch" method="get">
            <div class="rows">
@@ -66,117 +70,15 @@
                    <input type="text" class="inputMsg startTime jedate datepicker-here datainp" id="startTime" data-language="en" value="">
                    -
                    <input type="text" class="inputMsg endTime jedate datepicker-here datainp" id="endTime" data-language="en" value="">
-                   <!--
-                   <div id="timeNodeBox" class="timeNodeBox">
-                       <a class="timenode clearDate ui-link clear" href="javascript:void(0)">清除</a>
-                       <a class="timenode ui-link yestoday" href="javascript:void(0)">昨天</a>
-                       <a class="timenode ui-link today" href="javascript:void(0)">今天</a>
-                       <a class="timenode ui-link week" href="javascript:void(0)">本周</a>
-                       <a class="timenode ui-link prevWeek" href="javascript:void(0)">上周</a>
-                       <a class="timenode ui-link month" href="javascript:void(0)">本月</a>
-                       <a class="timenode ui-link prevMonth" href="javascript:void(0)">上月</a>
-                   </div>
-                   -->
                </div>
            </div>
-           <!--
-           <script type="text/javascript">
-               var start = {
-                   format: 'YYYY-MM-DD',
-                   minDate: '2014-06-16', //设定最小日期为当前日期
-                   festival:true,
-                   //isinitVal:true,
-                   maxDate: $.nowDate(0), //最大日期
-                   choosefun: function(elem,datas){
-                       end.minDate = datas; //开始日选好后，重置结束日的最小日期
-                   }
-               };
-               var end = {
-                   format: 'YYYY年MM月DD日',
-                   minDate: $.nowDate(0), //设定最小日期为当前日期
-                   festival:true,
-                   //isinitVal:true,
-                   maxDate: '2099-06-16', //最大日期
-                   choosefun: function(elem,datas){
-                       start.maxDate = datas; //将结束日的初始值设定为开始日的最大日期
-                   }
-               };
-               $("#inpstart").jeDate(start);
-               $("#inpend").jeDate(end);
-
-
-               $("#date01").jeDate({
-                   isinitVal:true,
-                   festival:true,
-                   ishmsVal:false,
-                   minDate: '2016-06-16 23:59:59',
-                   maxDate: $.nowDate(0),
-                   format:"YYYY-MM-DD hh:mm:ss",
-                   zIndex:3000,
-               })
-               $(".jedate").jeDate({
-                   isinitVal:true,
-                   festival:true,
-                   ishmsVal:false,
-                   minDate: '2016-06-16',
-                   maxDate: $.nowDate(0),
-                   format:"YYYY-MM-DD",
-                   zIndex:3000,
-               })
-               $("#date03").jeDate({
-                   isinitVal:true,
-                   festival:true,
-                   ishmsVal:false,
-                   minDate: '2016-06-16 23:59:59',
-                   maxDate: $.nowDate(0),
-                   format:"YYYY-MM-DD",
-                   zIndex:3000,
-               })
-               $("#date04").jeDate({
-                   isinitVal:true,
-                   festival:true,
-                   ishmsVal:false,
-                   minDate: '2016-06-16 23:59:59',
-                   maxDate: $.nowDate(0),
-                   format:"YYYY-MM",
-                   zIndex:3000,
-               })
-               $("#date05").jeDate({
-                   isinitVal:true,
-                   festival:true,
-                   ishmsVal:false,
-                   minDate: '2016-06-16 23:59:59',
-                   maxDate: $.nowDate(0),
-                   format:"hh:mm:ss",
-                   zIndex:3000,
-               })
-
-
-               function testShow(elem){
-                   $.jeDate(elem,{
-                       insTrigger:false,
-                       isinitVal:true,
-                       festival:true,
-                       ishmsVal:false,
-                       minDate: '2016-06-16 23:59:59',
-                       maxDate: $.nowDate(0),
-                       format:"hh:mm",
-                       zIndex:3000,
-                   })
-               }
-
-           </script>
-           -->
            <div class="rows">
                <div class="palyerMsg">
                    <label>票型名：</label>
                    <div class="orderTypeMsg">
                        <div>
-                           <input type="text" class="inputMsg on-selected b1" value="全部" readonly>
-                           <input type="hidden" value="0" class="realNum rName">
-                           <em class="i-triangle">
-                               <i class="triangle1"></i>
-                           </em>
+                           <input type="text" class="inputMsg on-selected ticketTypeLength" value="" readonly>
+                           <input type="hidden" value="" class="realNum rName">
                        </div>
                        <ul class="orderType">
                            <li>
@@ -271,7 +173,7 @@
            <div class="rows">
                <div class="palyerMsg">
                    <label>游客手机号 / 游客姓名 / 订单号 / 电子票二维码号：</label>
-                   <input type="text" class="inputMsg multiple">
+                   <input type="text" class="inputMsg multiple focusEvent">
                </div>
                <input type="button" value="查询" class="search searchbyMultiple">
            </div>
@@ -306,54 +208,14 @@
                    <input type="radio" class="channel produceSelect" value="3" name="channelChoices" checked="checked">全部</input>
                    <input type="radio" class="channel" value="1" name="channelChoices">仅自己</input>
                    <input type="radio" class="channel" value="2" name="channelChoices">下级分销商</input>
-                   <!--
-                   <input class="ranking" value="销售总排行" readonly>
-                   -->
-
-                   <!--
-                   <label>供销商筛选：</label>
-                   <label class="radioGroup"><input class="gRadio" data-param="gmode" data-val="0" type="radio" name="gmode" checked="">全部</label>
-                   <label class="radioGroup"><input class="gRadio" data-param="gmode" data-val="0" type="radio" name="gmode" checked="">自身</label>
-                   <label class="radioGroup"><input class="gRadio" data-param="gmode" data-val="0" type="radio" name="gmode" checked="">下级分销商</label>
-                   <div class="orderTypeMsg">
-                       <div>
-                           <input type="text" class="inputMsg on-selected b1" value="全部" readonly>
-                           <em class="i-triangle">
-                               <i class="triangle1"></i>
-                           </em>
-                       </div>
-                       <ul class="orderType">
-                           <li>
-                               <a href="javascript:void(0)" value="0">全部</a>
-                           </li>
-                           <li>
-                               <a href="javascript:void(0)" value="1">自己销售的产品</a>
-                           </li>
-                           <li>
-                               <a href="javascript:void(0)" value="2">下级分销商</a>
-                           </li>
-                       </ul>
-
-                   </div>
-                   -->
                </div>
 
            </div>
            <div class="orders">
 
                <div class="order no-border">
-                   <!--
-                   <div class="orderPreview">
-                       <a href="">下单时间<i class="iconfont"></i></a>
-                       <a href="">游玩时间</a>
-                   </div>
-                   -->
-
                    <ul class="titleName">
-                       <li class="name1">
-                         <span>
-                            <a href="" class="allId">票信息</a>
-                         </span>
+                       <li class="name1 allId">票信息
                        </li>
                        <li class="name3">游玩人</li>
                        <li class="name2">分销商</li>
@@ -365,34 +227,6 @@
                        <p class="noText">请输入条件搜索订单</p>
                    </div>
                    <div class="menuDiff"></div>
-                   <!--
-                   <div class="menuDsp">
-                       <div class="menuHead">
-                           <div class="menuHead1">
-                               <a class="menuID" href="">订单号：10345833</a>
-                               <a class="menuName" href="">陕西会客厅冰雪大世界</a>
-                               <label class="menuTime">下单时间:2017/03/20 11:37:17</label>
-                           </div>
-                           <ul class="items">
-                               <li class="name1"><a href="" class="singleId">曲江海洋极地公园成人票【预订2小时后刷二维码入园，一个手机号最多预定3张】</a></li>
-                               <li class="name3 blue">
-                                   <span>刘红</span>
-                                   <br>
-                                   <span>18292860000</span>
-                               </li>
-                               <li class="name2 green">西安万邦企业信息咨询有限公司</li>
-                               <li class="name4">
-                                   ¥140*1张=¥140<br>
-                                   授信支付</li>
-                               <li class="name4">购买成功</li><li class="name5 blue mulChoose">
-                               <a href="javascript:void(0)" class="editButton">编辑</a>
-                               <a href="javascript:void(0)" class="againID">重发码</a></li>
-                           </ul>
-                           <div class="clear line"></div>
-                       </div>
-
-                   </div>
-                   -->
                </div>
 
            </div>
@@ -401,11 +235,6 @@
                    <a href="" class="gnumber">票数</a>
                    <a href="" class="gmoney">金额</a>
                </div>
-               <div id="highcharts">
-
-               </div>
-
-
                <ul class="titleName2">
                    <li class="name8">
                          <span>
@@ -418,37 +247,9 @@
                    <li class="name6"></li>
                    <li class="name7"></li>
                </ul>
-
-
-               <!--
-               <ul class="items">
-               <li class="name1">
-                   <span>
-                      <a href="" class="singleId">票型ID</a>
-                   </span>
-              </li>
-              <li class="name3 blue">票型名</li>
-              <li class="name2 green">已购买总数</li>
-              <li class="name4">已验票总数</li>
-              <li class="name4">剩余可用票总数</li>
-           </ul>
-               <div class="clear"></div>
-               <ul class="items">
-                   <li class="name1">
-                   <span>
-                      <a href="" class="singleId">票型ID</a>
-                   </span>
-                   </li>
-                   <li class="name3 blue">票型名</li>
-                   <li class="name2 green">已购买总数</li>
-                   <li class="name4">已验票总数</li>
-                   <li class="name4">剩余可用票总数</li>
-               </ul>
-               <div class="clear line2"></div>
-                -->
            </div>
            <div class="calcleMenu">
-               <div class="ticketMsg2"><span>电子门票</span><input type="text" class="basicMsg electName" value=""></div>
+               <div class="ticketMsg2"><span>电子门票</span><input type="text" class="basicMsg electName" value="" readonly></div>
                <div class="ticketMsg2"><span>票数</span><input type="text" class="basicMsg cancleNum" value=""></div>
                <button value="" class="orderSure2">退票</button>
                <button value="" class="orderAdd2">新增</button>
@@ -502,12 +303,10 @@
            </p>
        </footer>
    </div>
-
 </body>
-
 <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
-<script type="text/javascript"  src="js/getOrderInfo.js"></script>
 <script type="text/javascript"  src="js/cookie.js"></script>
+<script type='text/javascript' src='js/jquery.md5.js'></script>
 <script type="text/javascript" src="js/jquery.jedate.js"></script>
 <script type="text/javascript">
         $("#startTime").jeDate({
@@ -522,7 +321,6 @@
 
 </script>
 <script type="text/javascript"  src="js/base.js"></script>
-<script type="text/javascript" src="js/highcharts.js"></script>
 </html>
 
 
