--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
            </div>
            <div  id="shop_user">
                <div  class="box_shop">
-                   <!-- /justIT/jsp/user/cart.jsp -->
                </div>
                <div  class="box_user box_shop_user">
                </div>
            </div>
        </header>
+        <div class="clear"></div>
        <!--end  header-->
        <div id="banner">
           <div class="banner_menu">
@@ -86,6 +86,7 @@
           </li>
       </ul>
        </div>
+
        <!--end banner-->
        <div  class="containter">
            <div  class="display_bg1">
