--- a/ticketType.html
+++ b/ticketType.html
@@ -11,6 +11,12 @@
 </body>
 <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/cookie.js"></script>
+<script type="text/javascript">
+    if(!getCookie("UserName")){
+        alert("您尚未登录，请先登录");
+        window.location.href="login.html";
+    }
+</script>
 <script type='text/javascript' src='js/jquery.md5.js'></script>
 <script type="text/javascript" src="js/scene.js"></script>
 </html>
