--- a/scene_detail.html
+++ b/scene_detail.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>景区详细页</title>
+    <meta charset="utf-8">
+    <title>景区详细页</title>
+    <script type="text/javascript">
+        if(!document.cookie.UserName){
+            alert("您尚未登录，请先登录");
+            window.location.href="login.html";
+        }
+    </script>
 <link  rel="stylesheet"   href="css/base.css"/>
 <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
 <script src="js/jquery.js"></script>
